--- a/index.html
+++ b/index.html
@@ -101,18 +101,21 @@ background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);cursor:point
 
 <script>
 const tgInstance = initTelegramGuard();
+const searchUid = new URLSearchParams(window.location.search).get("uid");
 
 function getTgUserId(){
   try{ return tg?.initDataUnsafe?.user?.id || null; }catch(e){ return null; }
 }
 
+const uid = getTgUserId() || searchUid;
+
 async function loadBalance(){
-  const uid=getTgUserId();
+  const currentUid=getTgUserId() || searchUid;
   const el=document.getElementById("balanceValue");
   if(!el) return;
   try{
     let url = "/api/balance";
-    if(uid) url += "?user_id="+uid;
+    if(currentUid) url += "?user_id="+currentUid;
     const d = await apiGet(url);
     el.textContent=d.balance??0;
     localStorage.setItem("balance_local", el.textContent);
@@ -120,7 +123,12 @@ async function loadBalance(){
     el.textContent=localStorage.getItem("balance_local")||"0";
   }
 }
-loadBalance();
+
+(async () => {
+  if(!tgInstance) return;
+  await ensureNicknameOrRedirect(uid);
+  loadBalance();
+})();
 </script>
 </body>
 </html>
