--- a/bj.html
+++ b/bj.html
@@ -190,13 +190,16 @@
 
 <script>
   const tgInstance = initTelegramGuard();
+  const searchUid = new URLSearchParams(window.location.search).get("uid");
 
   function getTgUserId(){
     try{ return tg?.initDataUnsafe?.user?.id || null; }catch(e){ return null; }
   }
 
+  const uid = getTgUserId() || searchUid;
+
   async function loadBalance(){
-    const uid=getTgUserId();
+    const uid=getTgUserId() || searchUid;
     const el=document.getElementById("balanceValue");
     if(!el) return;
     try{
@@ -427,7 +430,11 @@
     setTimeout(dealerPlay, 700);
   });
 
-  loadBalance();
+  (async () => {
+    if(!tgInstance) return;
+    await ensureNicknameOrRedirect(uid);
+    loadBalance();
+  })();
 </script>
 </body>
 </html>
