--- a/slot.html
+++ b/slot.html
@@ -161,11 +161,14 @@
 
 <script>
   const tgInstance = initTelegramGuard();
+  const searchUid = new URLSearchParams(window.location.search).get("uid");
 
   function getTgUserId(){ try{ return tg?.initDataUnsafe?.user?.id || null; }catch(e){ return null; } }
 
+  const uid = getTgUserId() || searchUid;
+
   async function loadBalance(){
-    const uid=getTgUserId();
+    const uid=getTgUserId() || searchUid;
     const el=document.getElementById("balanceValue");
     if(!el) return;
     try{
@@ -332,7 +335,11 @@
     btnAuto.textContent="Авто ×10";
   });
 
-  loadBalance();
+  (async () => {
+    if(!tgInstance) return;
+    await ensureNicknameOrRedirect(uid);
+    loadBalance();
+  })();
 </script>
 </body>
 </html>
