--- a/rpg.html
+++ b/rpg.html
@@ -94,6 +94,8 @@ header{display:flex;align-items:center;justify-content:space-between;padding:10p
 .buybtn:disabled{opacity:.5;cursor:not-allowed;}
 .note{font-size:12px;color:var(--muted);margin-top:6px;}
 .hidden{display:none!important;}
+#benchConvert,.res-card select,#benchConvert input,#benchConvert button{color:var(--text);}
+#benchConvert select,#benchConvert input{background:linear-gradient(180deg,var(--card),var(--card2));border:1px solid var(--stroke);}
 </style>
 </head>
 <body>
