--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@ border-radius:16px;padding:14px;box-shadow:var(--shadow);margin-bottom:12px;}
 .cardbtn{display:flex;justify-content:space-between;align-items:center;padding:14px;border-radius:14px;border:1px solid var(--stroke);
 background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);cursor:pointer;transition:.15s ease;text-decoration:none;color:var(--text);}
 .cardbtn:hover{border-color:var(--stroke2);transform:translateY(-1px);} .cardbtn h3{margin:0;font-size:16px;font-weight:900;}
-.cardbtn p{margin:4px 0 0;font-size:12px;color:var(--muted);}
+.cardbtn p{margin:4px 0 0;font-size:12px;color:var(--muted);} 
 @media (max-width:720px){.grid{grid-template-columns:1fr;}}
+.menu-btn{margin-top:12px;width:100%;padding:12px;border-radius:12px;border:1px dashed var(--stroke2);background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);color:var(--text);font-weight:800;cursor:pointer;display:none;}
+.menu-btn:hover{border-style:solid;}
 </style>
 </head>
 <body>
@@ -95,6 +97,8 @@ background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);cursor:point
   <div class="badge">→</div>
     </a>
 
+  <button id="admin-panel-btn" class="menu-btn">Админ-панель</button>
+
 </section>
 
 </div>
@@ -133,6 +137,13 @@ async function loadBalance(){
       const query = uid ? `?uid=${uid}` : "";
       window.location.href = `/nickname${query}`;
       return;
+    }
+    if(prof.is_admin){
+      const btn = document.getElementById("admin-panel-btn");
+      if(btn){
+        btn.style.display = "block";
+        btn.onclick = () => { window.open("/admin", "_blank"); };
+      }
     }
   }
   loadBalance();
