--- a/index.html
+++ b/index.html
@@ -32,13 +32,43 @@ border-radius:16px;padding:14px;box-shadow:var(--shadow);margin-bottom:12px;}
 .cardbtn{display:flex;justify-content:space-between;align-items:center;padding:14px;border-radius:14px;border:1px solid var(--stroke);
 background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);cursor:pointer;transition:.15s ease;text-decoration:none;color:var(--text);}
 .cardbtn:hover{border-color:var(--stroke2);transform:translateY(-1px);} .cardbtn h3{margin:0;font-size:16px;font-weight:900;}
-.cardbtn p{margin:4px 0 0;font-size:12px;color:var(--muted);} 
+.cardbtn p{margin:4px 0 0;font-size:12px;color:var(--muted);}
 @media (max-width:720px){.grid{grid-template-columns:1fr;}}
 .menu-btn{margin-top:12px;width:100%;padding:12px;border-radius:12px;border:1px dashed var(--stroke2);background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);color:var(--text);font-weight:800;cursor:pointer;display:none;}
 .menu-btn:hover{border-style:solid;}
+.muted{color:var(--muted);font-size:13px;}
+.admin-fab{position:fixed;top:12px;left:12px;width:46px;height:46px;border-radius:50%;border:1px solid var(--stroke);background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);box-shadow:var(--shadow);color:var(--text);display:flex;align-items:center;justify-content:center;font-weight:900;cursor:pointer;z-index:9999;transition:.15s ease;}
+.admin-fab:hover{border-color:var(--stroke2);transform:translateY(-1px);} .admin-fab:active{transform:scale(.98);}
+.modal-backdrop{position:fixed;inset:0;background:rgba(0,0,0,.65);display:none;align-items:center;justify-content:center;padding:16px;z-index:9998;}
+.modal-backdrop.active{display:flex;}
+.modal-window{width:min(380px,100%);background:linear-gradient(180deg,var(--panel) 0%,var(--card) 100%);border:1px solid var(--stroke2);border-radius:16px;box-shadow:var(--shadow);padding:18px;}
+.modal-window h3{margin:0 0 4px;font-size:18px;}
+.modal-window label{display:block;font-size:13px;color:var(--muted);margin-top:10px;margin-bottom:6px;}
+.modal-window input{width:100%;padding:10px;border-radius:10px;border:1px solid var(--stroke);background:var(--card2);color:var(--text);font-weight:700;}
+.modal-actions{display:flex;gap:10px;margin-top:14px;}
+.modal-actions button{flex:1;padding:11px;border-radius:12px;border:1px solid var(--stroke2);cursor:pointer;font-weight:800;}
+.modal-actions button.primary{background:linear-gradient(180deg,var(--blue) 0%,var(--blue2) 100%);color:var(--text);}
+.modal-actions button.secondary{background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);color:var(--text);border-style:dashed;}
 </style>
 </head>
 <body>
+<button id="admin-login-fab" class="admin-fab" type="button" title="Админка">⚙️</button>
+<div id="admin-login-modal" class="modal-backdrop" role="dialog" aria-modal="true" aria-labelledby="admin-login-title">
+  <div class="modal-window">
+    <h3 id="admin-login-title">Вход в админку</h3>
+    <div class="muted">Доступ только по логину и паролю.</div>
+    <form id="admin-login-form">
+      <label for="admin-login">Логин</label>
+      <input id="admin-login" name="login" type="text" autocomplete="username" required>
+      <label for="admin-password">Пароль</label>
+      <input id="admin-password" name="password" type="password" autocomplete="current-password" required>
+      <div class="modal-actions">
+        <button type="submit" class="primary">Войти</button>
+        <button type="button" id="admin-login-cancel" class="secondary">Отмена</button>
+      </div>
+    </form>
+  </div>
+</div>
 <div class="app">
 <header>
 <div style="width:64px"></div>
@@ -106,6 +136,7 @@ background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);cursor:point
 <script>
 const tgInstance = initTelegramGuard();
 const searchUid = new URLSearchParams(window.location.search).get("uid");
+const ADMIN_FLAG_KEY = "fg_is_admin";
 
 function getTgUserId(){
   try{ return tg?.initDataUnsafe?.user?.id || null; }catch(e){ return null; }
@@ -128,6 +159,75 @@ async function loadBalance(){
   }
 }
 
+function isAdmin(){
+  return localStorage.getItem(ADMIN_FLAG_KEY) === "1";
+}
+
+function openAdminPanel(){
+  window.location.href = "/admin";
+}
+
+function closeAdminModal(){
+  const modal = document.getElementById("admin-login-modal");
+  modal.classList.remove("active");
+  const form = document.getElementById("admin-login-form");
+  if(form){
+    form.reset();
+  }
+}
+
+function openAdminModal(){
+  const modal = document.getElementById("admin-login-modal");
+  modal.classList.add("active");
+  const loginInput = document.getElementById("admin-login");
+  setTimeout(() => loginInput?.focus(), 50);
+}
+
+function updateAdminButtons(){
+  const hasAccess = isAdmin();
+  const btn = document.getElementById("admin-panel-btn");
+  if(btn){
+    btn.style.display = hasAccess ? "block" : "none";
+    btn.onclick = openAdminPanel;
+  }
+  const fab = document.getElementById("admin-login-fab");
+  if(fab){
+    fab.title = hasAccess ? "Открыть админ-панель" : "Вход в админку";
+  }
+}
+
+document.getElementById("admin-login-fab")?.addEventListener("click", () => {
+  if(isAdmin()){
+    openAdminPanel();
+  }else{
+    openAdminModal();
+  }
+});
+
+document.getElementById("admin-login-cancel")?.addEventListener("click", closeAdminModal);
+
+document.getElementById("admin-login-modal")?.addEventListener("click", (e) => {
+  if(e.target === e.currentTarget){
+    closeAdminModal();
+  }
+});
+
+document.getElementById("admin-login-form")?.addEventListener("submit", (e) => {
+  e.preventDefault();
+  const login = document.getElementById("admin-login")?.value.trim();
+  const pass = document.getElementById("admin-password")?.value.trim();
+  if(login === "admin" && pass === "admin"){
+    localStorage.setItem(ADMIN_FLAG_KEY, "1");
+    closeAdminModal();
+    updateAdminButtons();
+    openAdminPanel();
+  }else{
+    alert("Неверный логин или пароль");
+  }
+});
+
+updateAdminButtons();
+
 (async () => {
   if(!tgInstance) return;
   const prof = await fetchProfile();
@@ -137,13 +237,6 @@ async function loadBalance(){
       const query = uid ? `?uid=${uid}` : "";
       window.location.href = `/nickname${query}`;
       return;
-    }
-    if(prof.is_admin){
-      const btn = document.getElementById("admin-panel-btn");
-      if(btn){
-        btn.style.display = "block";
-        btn.onclick = () => { window.open("/admin", "_blank"); };
-      }
     }
   }
   loadBalance();
