--- a/index.html
+++ b/index.html
@@ -101,8 +101,6 @@ background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);cursor:point
   <div class="badge">→</div>
     </a>
 
-  <button id="admin-panel-btn" class="menu-btn">Админ-панель</button>
-
 </section>
 
 </div>
@@ -131,16 +129,32 @@ async function loadBalance(){
   }
 }
 
-function openAdminPanel(){
-  window.location.href = "/admin";
+async function openAdminPanel(){
+  const username = prompt("Логин администратора")?.trim();
+  if(!username) return;
+  const password = prompt("Пароль администратора") || "";
+  try{
+    const res = await fetch(API_BASE + "/api/admin/login", {
+      method: "POST",
+      headers: {"Content-Type": "application/json"},
+      credentials: "include",
+      body: JSON.stringify({username, password}),
+    });
+    if(!res.ok){
+      let msg = "";
+      try{ const data = await res.json(); msg = data?.detail || data?.error || ""; }catch(e){}
+      throw new Error(msg || "Ошибка авторизации");
+    }
+    const data = await res.json();
+    if(!data.ok){
+      throw new Error(data.error || "Ошибка авторизации");
+    }
+    window.location.href = "/admin";
+  }catch(e){
+    alert("Не удалось войти: " + (e?.message || e));
+  }
 }
 document.getElementById("admin-gear-btn")?.addEventListener("click", openAdminPanel);
-
-const adminMenuBtn = document.getElementById("admin-panel-btn");
-if(adminMenuBtn){
-  adminMenuBtn.style.display = "block";
-  adminMenuBtn.onclick = openAdminPanel;
-}
 
 (async () => {
   if(!tgInstance) return;
