--- a/error_notg.html
+++ b/error_notg.html
@@ -135,12 +135,14 @@
         </h1>
         <p>
           Похоже, страница открыта <b>не через Telegram-мини-приложение</b>.<br/>
-          Чтобы всё работало — авторизация, баланс, игры и RPG — нужно зайти из бота.
+          Доступ вне мини-приложения <b>невозможен</b>!<br/>
+          Нет,доступа без тг-бота <b>никогда не будет</b>!
         </p>
         <ul>
-          <li>Открой нашего бота в Telegram.</li>
-          <li>Нажми кнопку <b>«Подтвердить»</b>, если её ещё не нажимал.</li>
-          <li>Выбери <b>«Открыть приложение»</b>, чтобы запустить FirstClub.</li>
+          <li>Открой нашего бота в Telegram и напишите /start.</li>
+          <li>Прочтите политику использования.</li>
+          <li>Если вы согласны нажимайте <b>Подтвердить</b></li>
+          <li>Выбери <b>«Открыть приложение»</b>, чтобы запустить FirstGamble.</li>
         </ul>
 
 
